<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:gravity="center_vertical"
        android:text="@string/choose_time"
        android:textColor="@color/green"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/green" />

    <DatePicker
        android:id="@+id/date_picker"
        style="@style/MyDatePickerStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:theme="@style/MyDatePickerSpinnerStyle"></DatePicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_buttom"
            android:gravity="center"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_buttom"
            android:gravity="center"
            android:text="@string/oke" />
    </LinearLayout>
</LinearLayout>